# tpnn

./: .gitignore  1.ipynb  1_laptops.ipynb  2.ipynb  2_mushrooms.ipynb  4_mnist_decimals.ipynb  README.md  featues.py  feature_engineering.ipynb  parse_mushrooms.py  pyproject.toml
data/: classification_test.txt  drug_classification.csv  drug_deaths.csv  mushrooms.csv
tests/: features_test.py
tests/architectures/: conftest.py  test_perceptron_layers.py  test_perceptron_setups.py
tests/architectures/fixtures/: layer.py  perceptron.py
tests/core/: conftest.py  test_pipeline.py
tests/core/fixtures/: pipeable_classes.py
tests/features/: features_test.py
tpnn/: __init__.py  features.py  metrics.py
tpnn/architectures/: __init__.py  activation.py  layer.py  loss.py  neural_network.py  perceptron.py  solver.py
tpnn/architectures/base/: __init__.py  activation.py  layer.py  loss.py
tpnn/architectures/perceptron/: activation.py  layer.py
tpnn/core/: __init__.py  differentiable.py  exceptions.py  pipeline.py  singleton.py  sparse.py  split.py  types.py
tpnn/features/: __init__.py  encoding.py  imputing.py  outliers.py  relations.py  scaling.py
tpnn/metrics/: classification.py  regression.py
tpnn/networks/: __init__.py  layer.py  lenet.py  loss.py  neural_network.py  perceptron.py  solver.py
tpnn/vizualiztion/: animations.py
