[tool.poetry]
name = "tpnn"
version = "0.1.0"
description = "Laboratory work according to the course Theory and Practicies of Neural Networks"
authors = ["TJesT <alexeynospid@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.0"
scipy = "^1.12.0"
numba = "^0.59.0"
torch = "^2.2.0"
ipykernel = "^6.29.2"
pyarrow = "^15.0.0"
seaborn = "^0.13.2"
scikit-learn = "^1.4.0"
pytest = "^8.0.0"
dtreeviz = "^2.2.2"
pytest-cov = "^4.1.0"

[tool.pytest.ini_options]
testpaths = [
    "./tests/core",
    "./tests/features",
    "./tests/architectures",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
